add table cells

--- a/index.html
+++ b/index.html
@@ -45,8 +45,27 @@
             <input class="button" type="button" id="calculate-schedule" value="Рассчитать">
         </div>
         <!-- </form> -->
-        <div  id="for-test"></div>
-        <div id="schedule-out" style="background-color: rgb(192, 2, 12);color: #fff"></div>
+        <div  id="for-test" class="for-test">
+
+        </div>
+        <div id="schedule-out" class="schedule-out">
+            <table id="table-out" class="table-out">
+                <thead id="thead-out" class="thead-out">
+                    <tr>
+                        <th>Понедельник </th>
+                        <th>Вторник</th>
+                        <th>Среда</th>
+                        <th>Четверг</th>
+                        <th>Пятница</th>
+                        <th>Суббота</th>
+                        <th>Воскресенье</th>
+                    </tr>
+                </thead>
+                <tbody id="tbody-out" class="tbody-out">
+
+                </tbody>
+            </table>
+        </div>
     </div>
 </body>
 </html>
